# commonplace

./: .flake8  README.md  database.esdl  logging.ini  pyproject.toml
commonplace/: __init__.py  app.py  convenience.py  db_bootstrap.py  queries.py
commonplace/static/: favicon.pxm  humans.txt  logo-large.pxm  style.css
commonplace/templates/: 404.html  500.html  base.html  index.html
dbschema/: default.esdl  util.esdl
dbschema/migrations/: 00001.edgeql
tests/: test_commonplace.py
