[tool.poetry]
name = "commonplace"
version = "20.4.0"
description = "A commonplace book"
authors = ["Łukasz Langa <lukasz@langa.pl>"]
license = "MIT"

[tool.poetry.scripts]
langapl = "commonplace.main:main"

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^19.3.0"
click = "^7.0"
uvloop = "^0.14.0"
edgedb = "0.8.0a1"
starlette = "^0.13.2"
jinja2 = "^2.11.1"
aiofiles = "^0.4.0"
python-multipart = "^0.0.5"
itsdangerous = "^1.1.0"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.761"
flake8-bugbear = "^20.1.4"
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"