[tool.poetry]
name = "commonplace"
version = "0.1.0"
description = ""
authors = ["Łukasz Langa <lukasz@langa.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.2"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
edgedb = "^0.13.0"
Jinja2 = "^2.11.3"
python-dateutil = "^2.8.1"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.812"
flake8-bugbear = "^21.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
