[tool.poetry]
name = "commonplace"
version = "0.1.0"
description = ""
authors = ["Łukasz Langa <lukasz@langa.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.26.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
Jinja2 = "^3.1.2"
python-dateutil = "^2.8.1"
aiofiles = "^0.6.0"
edgedb = "^1.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
flake8-bugbear = "^21.3.2"
pytest = "^7.3.1"
types-python-dateutil = "^2.8.19.12"  # for mypy

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
